Its finally working